# statFEMplusplus

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  note.txt
.cache/clangd/index/: BoundaryCase.cpp.0BBEAAA2C2EB3F01.idx  BoundaryCase.hpp.4AEFAE7BA1B1243D.idx  Constraint.cpp.1FCED6F728730D2B.idx  Constraint.hpp.447288E6C1E266A2.idx  LocalAxis.cpp.1A26ACEB85A934B8.idx  LocalAxis.hpp.9B3AA8A969665380.idx  Material.cpp.66B26CF8B11C834B.idx  Material.hpp.DFA01B6501AED283.idx  NodalMechLoad.cpp.0380D6FFFFDB0961.idx  NodalMechLoad.hpp.53B736167599CAB9.idx  Node.cpp.85F88C71FD1B7E4F.idx  Node.hpp.9FC91CF67231441D.idx  main.cpp.5B49F6329E0A8C04.idx  statFEMplusplus.hpp.D9419626F5A079FA.idx
cmake/: addEigen3.cmake  addMatplotplusplus.cmake
examples/: main.cpp  main_exprtk_matplot.cpp
examples/mesh/: plate.m  plate.vtk
src/: CMakeLists.txt  Line.h  Node.cpp  Node.h  Node.hpp  Point.cpp  Point.h  Point.hpp  statFEMplusplus.hpp  statFEMpp.h
src/boundary/: BoundaryCase.cpp  BoundaryCase.h  BoundaryCase.hpp  Constraint.cpp  Constraint.h  Constraint.hpp  DispLoad.cpp  DispLoad.hpp  ElementMechLoad.cpp  ElementMechLoad.hpp  ElementTemp.cpp  ElementTemp.hpp  NodalMechLoad.cpp  NodalMechLoad.h  NodalMechLoad.hpp
src/element/: Element.hpp
src/material/: Material.cpp  Material.hpp
src/node/: LocalAxis.cpp  LocalAxis.h  LocalAxis.hpp  Node.cpp  Node.h  Node.hpp
src/section/: Section.hpp
test/: CMakeLists.txt  testBoundaryCase.cpp
test/boundary/: testBoundaryCase.cpp  testConstraint.cpp  testDispLoad.cpp  testElementMechLoad.cpp  testElementTemp.cpp  testNodalMechLoad.cpp
